Fixed some broken css

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -3,47 +3,43 @@ body {
     font-family: sans-serif;
     background-image: url(/qr.png);
     padding-bottom: 50px;
-    animation-name: fadein;
-    animation-duration: 1s;
-    animation-timing-function: ease;
-    position: relative;
-  }
-  h1 {
+}
+h1 {
     font-family: BoldTitle;
     margin: auto;
     font-size: 80px;
-  }
-  h2 {
+}
+h2 {
     font-family: BoldTitle;
     font-size: 40px;
-  }
-  p {
+}
+p {
     font-family: BodyText;
     font-size: 30px;
-  }
-  a {
+}
+a {
     color: #FFC000;
-  }
+}
 
-  .title {
+.title {
     text-align: center;
-  }
-  .stats {
+}
+.stats {
     background-color: #222;
     text-align: left;
     padding: 10px 30px 10px 30px;
     margin: 10px 5% 10px 5%;
     border-radius: 20px;
-  }
-  .body {
+}
+.body {
     margin-top: 50px;
     text-align: center;
-  }
-  .desc {
+}
+.desc {
     text-align: left;
     padding: 20px;
-  }
-  .content {
+}
+.content {
     width: fit-content;
     background-color: #000;
     padding: 20px;
@@ -51,17 +47,17 @@ body {
     border-radius: 30px;
     padding-bottom: 60px;
     box-shadow: 0 0 20px #111;
-  }
-  .art {
+}
+.art {
     margin: 60px 0px 60px 0px;
     overflow: auto;
-  }
-  .artentry {
+}
+.artentry {
     padding: 20px;
     float: left;
     overflow: auto;
-  }
-  .credit {
+}
+.credit {
     color: #999;
     text-shadow: 0 0 2px #000;
     font-family: monospace;
@@ -70,33 +66,49 @@ body {
     float: right;
     writing-mode: vertical-rl;
     margin: 0 5px 0 5px;
-  }
-  .button {
+}
+.button {
     font-family: BodyText;
     font-size: 25px;
     background-color: #222;
     border-radius: 10px;
     padding: 10px;
     text-decoration: none;
-  }
-  .topnav {
+}
+.topnav {
     padding: 20px;
     text-align: center;
-  }
-  .topnav li {
-    display: inline-block;
-  }
+}
+.topnav li {
+    display: inline-block; 
+}
+.fadein {
+    animation-name: fadein;
+    animation-duration: 1s;
+    animation-timing-function: ease;
+    position: relative;
+}
+.spin {
+    animation-name: spin;
+    animation-duration: 1s;
+    animation-timing-function: ease;
+    position: relative;
+}
 
-  @font-face {
+@font-face {
     font-family: BoldTitle;
     src: url(/Caskaydia\ Cove\ Nerd\ Font\ Complete\ Mono\ Windows\ Compatible\ Italic.otf);
-  }
-  @font-face {
+}
+@font-face {
     font-family: BodyText;
     src: url(/Caskaydia\ Cove\ Nerd\ Font\ Complete\ Windows\ Compatible\ Light.otf);
-  }
+}
 
-  @keyframes fadein {
+@keyframes fadein {
     0%{opacity: 0; top: 20px;}
     100%{opacity: 100; top: 0px;}
-  }
+}
+@keyframes spin {
+    0%{transform: rotate(453deg);}
+    100%{transform: rotate(0deg);}
+}
